policies/users/samples/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-users-disallowed
  labels:
    app: nginx-users
spec:
  containers:
    - name: nginx
      image: nginx
